// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsActivity component should render daily room events 1`] = `
<AnalyticsActivity
  dateValue={
    Object {
      "endDate": null,
      "startDate": null,
    }
  }
  queryCompleted={[MockFunction]}
>
  <center
    className="room__events"
  >
    <div
      className="meeting-title"
    >
      <div
        className="title-heading"
      >
        Meeting Title
      </div>
      <div
        className="room-heading"
      >
        Booked Room
      </div>
      <div
        className="status-heading"
      >
        Status
      </div>
      <div
        className="participant-heading"
      >
        Participants
      </div>
    </div>
    <Overlay
      id="average-meeting"
    >
      <div>
        <div
          className="overlay"
          id="average-meeting"
        />
        <div
          className="Pagination-spinner"
        >
          <Spinner
            size=""
          >
            <div
              className="centered"
            >
              <div
                className="spinner"
              />
            </div>
          </Spinner>
        </div>
      </div>
    </Overlay>
    <div>
      <div
        className="activity"
        key="b54d2529-a5e3-4049-ba12-dcb90e611d95"
      >
        <div
          className="activity-day"
        >
          Thu May 30 2019
        </div>
        <div>
          <div
            className="activity-info-row"
            key="7ba8e15c-a769-48f3-ac34-3e7d67c56b29"
          >
            <div
              className="title"
            >
              <div>
                Measure Standup
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  04:15:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:45:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                10
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="ebac08ed-75ce-4f6c-b988-e59af80d6d6b"
          >
            <div
              className="title"
            >
              <div>
                Olamide x David
              </div>
            </div>
            <div
              className="room"
            >
              Safari5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="e898fa71-448e-4af0-82fc-76522d63d72a"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwagbemileke Oguntayo  - Senior Operations Manager, Nigeria
              </div>
            </div>
            <div
              className="room"
            >
              Kajuru
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="c84a531f-b05c-4d05-8feb-bf7a5edccf6d"
          >
            <div
              className="title"
            >
              <div>
                Agnes / Annabelle Catch Up
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="39c855be-91e6-49f8-8230-9be1eeddaa85"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="14599006-7404-49eb-98ac-79227b20e61b"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwatoyin Williams-Edem - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="8c65cc39-4023-4d0d-9a4d-7c859a687288"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="03beab39-75bd-4343-92a1-e2a2202a3491"
          >
            <div
              className="title"
            >
              <div>
                Team meetings
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="ff542693-9fde-41a6-8afe-21020d425046"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="3cefc53b-8ef1-4a3a-b3be-e407e79b7632"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="fb172ec6-97c2-4af4-a4f8-a3defd7bbbae"
          >
            <div
              className="title"
            >
              <div>
                Interview: Ayodele Odufuye - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="0641d8e3-5d2a-4cd4-9901-8e48ce79cb8e"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="3b2c24b6-59f6-4a71-933d-3ceafdd2430b"
          >
            <div
              className="title"
            >
              <div>
                Engineer Self Check-in 
              </div>
            </div>
            <div
              className="room"
            >
              test-5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                6
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="056c006c-d37e-4a49-98ed-c436e4204b1a"
          >
            <div
              className="title"
            >
              <div>
                Oladimeji + Tejumade _ Software Engineer (Values Alignment Call)
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="48da3391-eccb-49d8-8aa0-eca2139b502e"
          >
            <div
              className="title"
            >
              <div>
                Chux &lt;&gt; Godwin - Values Alignment Interview
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="57d41eee-4596-42e5-9410-b9df9f1aaa3b"
          >
            <div
              className="title"
            >
              <div>
                Brad &lt;&gt; Tope 1:1
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="886c8354-e4e0-4883-a2d0-6170997a0e14"
          >
            <div
              className="title"
            >
              <div>
                Lara&lt;&gt;Nneka
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  05:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  05:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="bf13ab37-e16a-4a8f-8bc8-87c8fdc86e6d"
          >
            <div
              className="title"
            >
              <div>
                Ghana General Manager Interview: Christiane Koenig
              </div>
            </div>
            <div
              className="room"
            >
              Empire State
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="46c3fd99-9e19-4dec-a4db-c77f4d88b757"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="1d068c48-296d-474a-98ec-0f0227fe3400"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="5ea68c31-85e4-4442-a67b-eb909a5f471f"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="03a78c3e-5f03-4c9f-943a-3ee23c3c7849"
          >
            <div
              className="title"
            >
              <div>
                Onsite Interview: Douglas + Team | Recruiting Operations Associate
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="07e7cfb8-3f99-4384-b17d-87617a043125"
          >
            <div
              className="title"
            >
              <div>
                Values Call Alignment: Caroline&lt;&lt;&gt;&gt; Manasseh
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="5f36d0ba-e903-425c-98d7-15cc0e9989f1"
          >
            <div
              className="title"
            >
              <div>
                Dev/Partner Meetings :)
              </div>
            </div>
            <div
              className="room"
            >
              Test Add
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:25:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </center>
</AnalyticsActivity>
`;

exports[`AnalyticsActivity component should render resource not founr 1`] = `
<AnalyticsActivity
  dateValue={
    Object {
      "endDate": null,
      "startDate": null,
    }
  }
  queryCompleted={
    [MockFunction] {
      "calls": Array [
        Array [
          "analyticsForDailyRoomEvents",
        ],
      ],
    }
  }
>
  <center
    className="room__events"
  >
    <div
      className="meeting-title"
    >
      <div
        className="title-heading"
      >
        Meeting Title
      </div>
      <div
        className="room-heading"
      >
        Booked Room
      </div>
      <div
        className="status-heading"
      >
        Status
      </div>
      <div
        className="participant-heading"
      >
        Participants
      </div>
    </div>
    <Overlay
      id="average-meeting"
    >
      <div>
        <div
          className="overlay"
          id="average-meeting"
        />
        <div
          className="Pagination-spinner"
        >
          <Spinner
            size=""
          >
            <div
              className="centered"
            >
              <div
                className="spinner"
              />
            </div>
          </Spinner>
        </div>
      </div>
    </Overlay>
    <div>
      <div
        className="activity"
        key="f1a57387-7d67-4938-a45b-dd44f92d66b7"
      >
        <div
          className="activity-day"
        >
          Thu May 30 2019
        </div>
        <div>
          <div
            className="activity-info-row"
            key="d40bc14b-83d2-4392-a24e-11c99c15ff6b"
          >
            <div
              className="title"
            >
              <div>
                Measure Standup
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  04:15:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:45:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                10
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="02617518-8ba1-44fa-9cd6-c86149575b8f"
          >
            <div
              className="title"
            >
              <div>
                Olamide x David
              </div>
            </div>
            <div
              className="room"
            >
              Safari5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b3dcfeb4-77dd-4868-8fb0-3a198214d125"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwagbemileke Oguntayo  - Senior Operations Manager, Nigeria
              </div>
            </div>
            <div
              className="room"
            >
              Kajuru
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b280f595-d8a8-44dd-9049-8b343b8dbd55"
          >
            <div
              className="title"
            >
              <div>
                Agnes / Annabelle Catch Up
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="28362a60-5118-44fe-8245-55b466b2124d"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="bb4d16a6-113c-44b7-bb6e-2d85311fa0d0"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwatoyin Williams-Edem - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="044cc5c7-bcfb-46e4-bce9-adc131345aff"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="d7f24e8b-3a5e-4b61-b29e-63ddc3e21c42"
          >
            <div
              className="title"
            >
              <div>
                Team meetings
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="83f1d4dd-7586-47bd-b50e-2e5a991c92a1"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="0f07ccfb-2fbe-4b07-97cd-6af9dc22a81e"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="234af689-62ed-4959-a08b-49f05a2155b1"
          >
            <div
              className="title"
            >
              <div>
                Interview: Ayodele Odufuye - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="383f7dd6-3821-4166-8754-a4cd734ec9d3"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="1512d6eb-eec7-412b-813a-95dc74e71c7f"
          >
            <div
              className="title"
            >
              <div>
                Engineer Self Check-in 
              </div>
            </div>
            <div
              className="room"
            >
              test-5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                6
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="8d49662a-df73-463a-a1df-4b841a6fa9af"
          >
            <div
              className="title"
            >
              <div>
                Oladimeji + Tejumade _ Software Engineer (Values Alignment Call)
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="ef060bb7-20c5-4fd3-913a-a2647593c171"
          >
            <div
              className="title"
            >
              <div>
                Chux &lt;&gt; Godwin - Values Alignment Interview
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="9fc6f2f3-0011-415d-8813-4e726443ba9f"
          >
            <div
              className="title"
            >
              <div>
                Brad &lt;&gt; Tope 1:1
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="f41c543e-7d87-4058-ae53-273b525a836e"
          >
            <div
              className="title"
            >
              <div>
                Lara&lt;&gt;Nneka
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  05:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  05:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="03c5f1ff-6a00-487a-87bd-83c64a3337d8"
          >
            <div
              className="title"
            >
              <div>
                Ghana General Manager Interview: Christiane Koenig
              </div>
            </div>
            <div
              className="room"
            >
              Empire State
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="72fcdc38-adec-45f8-ad5c-c1a11085a2ae"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="0006331e-fbfe-4ee8-b5d2-b7a986a6dfd3"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="d77ee41e-e404-4a58-bc1a-0736b3f60053"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="eb2f4f1d-1a26-4a79-8cd5-11cd7e293bf8"
          >
            <div
              className="title"
            >
              <div>
                Onsite Interview: Douglas + Team | Recruiting Operations Associate
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="731b68d0-4bc4-4636-96cc-10532ece3543"
          >
            <div
              className="title"
            >
              <div>
                Values Call Alignment: Caroline&lt;&lt;&gt;&gt; Manasseh
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="dad4f9b0-dd44-43c7-a808-283562b2706d"
          >
            <div
              className="title"
            >
              <div>
                Dev/Partner Meetings :)
              </div>
            </div>
            <div
              className="room"
            >
              Test Add
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:25:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </center>
</AnalyticsActivity>
`;
